--- a/css/main.css
+++ b/css/main.css
@@ -58,4 +58,30 @@ header{
 
 .render-heading{
     color: #f4f4f4;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.title-cards{
+    width: 100%;
+    height: 350px;
+    background-color: lightgray;
+}
+
+.title-overlay{
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    color: black;
+}
+
+.title-overlay:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
+footer{
+    width: 100%;
+    height: 100px;
+    margin-top: 200px;
+    background-color: #535857;
 }
